--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,32 @@
 details summary::-webkit-details-marker {
 	display: none;
 }
+
+.ng-enter {
+    -webkit-transition: 1s;
+    transition: 1s;
+    opacity: 0;
+}
+.ng-enter-active {
+    opacity: 1;
+}
+
+.ng-leave {
+    -webkit-transition: 1s;
+    transition: 1s;
+    opacity: 0;
+}
+.ng-leave-active {
+    opacity: 1;
+}
+.ng-move {
+    -webkit-transition: 1s;
+    transition: 1s;
+    opacity: 0;
+}
+.ng-move-active {
+    opacity: 1;
+}
+.padleft {
+    padding-left: 20px;
+}
