--- a/src/main.css
+++ b/src/main.css
@@ -41,3 +41,10 @@ details summary::-webkit-details-marker {
 .bookend {
     clear: both;
 }
+.header_div {
+    width: 65%;
+    margin: 0 auto;
+}
+.centered_text {
+    text-align: center;
+}
